refactor module exports